# nestalgic

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
include/: bus.h  cpu.h
src/: CMakeLists.txt  cpu.cpp
test/: CMakeLists.txt  cpu_bus_test.cpp  cpu_test.cpp
